# document-extraction

./: .gitignore  标准规范列表.xlsx  现行公路工程行业标准.xlsx
backend/: .env_example  gen_graph_schema.py  graph_script.py  list_mineru_result_type.py  main.py  pyproject.toml  sync_graph_database.py  update_document_metadata.py  upload_to_knowledge.py
backend/cache/: cache.py
backend/enums/: document_content_type.py  document_status.py  standard.py
backend/factory/: document_content_factory.py
backend/graph/document/: index.py
backend/graph/main/: index.py
backend/graph/page/: index.py
backend/graph/paragraph/: index.py
backend/knowledge/: dataset.py  document.py
backend/knowledge/cache/: file_cache.py  markdown_cache.py
backend/knowledge/model/: chunk.py  node.py
backend/knowledge/splitter/: CaptionSplitter.py  SizeSplitter.py  base.py
backend/knowledge/utils/: dify_util.py  (+4 more)
backend/model/: announcement.py  base.py  code.py  document.py  equation.py  foreword.py  image.py  notice.py  organization.py  origin_document.py  person.py  standard_specification.py  standard_specification_config.py  symbol.py  table.py  term.py  text.py  toc.py
backend/parser/: document_parser.py  excel_parser.py
backend/role/: announcument.py  core.py  foreword.py  notice.py  symbol.py  term.py  toc.py
backend/type/: document_content_item.py
backend/utils/: date_util.py  document_util.py  mineru_util.py  paragraph_util.py  path_util.py  request_util.py  text_util.py
backend/workflow/: parse_document.py  sysnc_graph_databse.py  transform_document.py  upload_to_knowledge.py
(+39 files in other folders)
