[project]
name = "document-extraction"
version = "1.0.0"
description = "公路造价文档解析"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipython>=9.12.0",
    "json-repair>=0.58.7",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "openpyxl>=3.1.5",
    "py2neo>=2021.2.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
